--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    implementation 'org.json:json:20210307'
+    compileOnly "com.fasterxml.jackson.core:jackson-databind:2.9.4"
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
 test {
