--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'commons-io:commons-io:2.5'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
@@ -31,6 +32,8 @@ dependencies {
     implementation 'org.json:json:20210307'
     compileOnly "com.fasterxml.jackson.core:jackson-databind:2.9.4"
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
+
 }
 
 test {
