--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.url=jdbc:h2:mem:springcoredb
 spring.datasource.username=sa
 spring.datasource.password=
 
-
+image.upload.directory =
+image.upload.url =/image
