--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation 'org.json:json:20210307'
     compileOnly "com.fasterxml.jackson.core:jackson-databind:2.9.4"
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
+    implementation group: 'org.json', name: 'json', version: '20160810'
 
 
 }
