장바구니, 메인페이지 리스트, 카테고리페이지 리스트 완료 테스트 데이터 작성완료 - 상품 총 36개 및 테스트유저 2명 webConfig CORS 작성 완료

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,10 @@ spring.datasource.url=jdbc:h2:mem:springcoredb
 spring.datasource.username=sa
 spring.datasource.password=
 
+# 서버에서 코드 변경시 자동으로 반영
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
 
+image.upload.directory = /home/ubuntu/images
+
+image.upload.url = /home/ubuntu/images
