--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,16 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:springcoredb
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:springcoredb
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+spring.datasource.url=jdbc:mysql://springboot-db.c9yuffnay6pw.ap-northeast-2.rds.amazonaws.com:3306/myboard
+spring.datasource.username=admin
+spring.datasource.password=qlwp4534
 
 # 서버에서 코드 변경시 자동으로 반영
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
 
-image.upload.directory = /home/ubuntu/images
+image.upload.directory =./img/
 
-image.upload.url = /home/ubuntu/images
+image.upload.url =./img/
