장바구니 상품 가격 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.datasource.password=qlwp4534
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
 
-image.upload.directory =./img/
+image.upload.directory =/home/ubuntu/images/
 
 image.upload.url =img/
